--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,4 +8,5 @@
 	<string name="cancel">Cancel</string>
 	<string name="prev">Prev</string>
 	<string name="next">Next</string>
+	<string name="db_insertion_success_dialog_title">Insertion succeeded</string>
 </resources>
