--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,4 +9,5 @@
 	<string name="prev">Prev</string>
 	<string name="next">Next</string>
 	<string name="db_insertion_success_dialog_title">Insertion succeeded</string>
+	<string name="error">Error</string>
 </resources>
