--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
     <string name="hello">Hello World, RRWelcome!</string>
     <string name="app_name">R2 - ReceiptReloaded</string>
@@ -10,4 +11,5 @@
 	<string name="next">Next</string>
 	<string name="db_insertion_success_dialog_title">Insertion succeeded</string>
 	<string name="error">Error</string>
+	<string name="rotate">Rotate</string>
 </resources>
